# laplace-s-oracle

./: .gitignore  BACKLOG.md  CHANGELOG.md  Cargo.toml  INNOVATION_LOG.md  OPERATIONS.md  README.md  ROADMAP.md  ROADMAP_V2.md  SECURITY.md  STRATEGY.md  laplace-oracle  laplace-tui
.agent/workflows/: init-substrate.md  release.md
.codex/: system.md
.codex/commands/: sync-docs.md
.github/workflows/: rust.yml
ci/: audit.sh  release.sh  sanity-check.sh
scripts/: observer.py
src/: biology.rs  events.rs  evolution.rs  intelligence.rs  ipc.rs  lib.rs  main.rs  math.rs  physics.rs  taxonomy_decoder.rs  telemetry.rs  temporal.rs  tui.rs  wormhole.rs
tests/: integrity_check.rs
